--- a/composer.json
+++ b/composer.json
@@ -20,15 +20,15 @@
     ],
     "require": {
         "php": ">=8.2",
-        "filament/filament": "^3.3",
+        "filament/filament": "^4.0",
         "laravel/framework": "^11.0 | ^12.0",
         "novius/laravel-translatable": "dev-main"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest",
         "larastan/larastan": "^3.1",
         "laravel/pint": "^1.10",
-        "orchestra/testbench": "^9.0 | ^10.1"
+        "orchestra/testbench": "^9.0 | ^10.1",
+        "roave/security-advisories": "dev-latest"
     },
     "autoload": {
         "psr-4": {
