--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": ">=8.2",
-        "filament/filament": "^4.0",
+        "filament/filament": "^4.0 | ^5.0",
         "laravel/framework": "^11.28 | ^12.0",
         "novius/laravel-translatable": "dev-main"
     },
